--- a/templates/index_paid.html
+++ b/templates/index_paid.html
@@ -457,7 +457,7 @@
   ];
 
   // ★ 朝イチで不問固定にする対象に at_gap を含める
-  const asaichiTargets = ["at_gap","prev_game","prev_coin","prev_diff","prev_renchan","prev_type"];
+  const asaichiTargets = ["at_gap","prev_game","prev_coin","prev_diff","prev_renchan","prev_type","custom_condition"];
 
   // 元の<option>退避
   const originalOptions = {};
