コトブキ修正9

--- a/templates/tool_list.html
+++ b/templates/tool_list.html
@@ -109,7 +109,7 @@
     .name {
       font-weight: 600;
       text-align: center;
-      font-size: 14px; /* ✅ 少し小さく */
+      font-size: 12px; /* ✅ 少し小さく */
     }
 
     /* リンクボタン共通 */
@@ -184,6 +184,16 @@
   <script>
     const toolsData = [
       {
+        name: "L 荒野のコトブキ飛行隊（PASS:7777）",
+        note: "https://note.com/kenslodata/n/n9475b350635e",
+        url:  "https://kenkentools.com/kotobuki/paid"
+      },
+      {
+        name: "L バベル（PASS:7777）",
+        note: "https://note.com/kenslodata/n/n9edc151b54fc",
+        url:  "https://kenkentools.com/babel/paid"
+      },
+      {
         name: "L 新鬼武者3",
         note: "https://note.com/kenslodata/n/n592917017aae",
         url:  "https://kenkentools.com/onimusya/paid"
@@ -209,7 +219,7 @@
         url:  "https://kenkentools.com/saki/paid"
       },
       {
-        name: "L 北斗の拳",
+        name: "L 北斗の拳（PASS:7777）",
         note: "https://note.com/kenslodata",
         url:  "https://kenkentools.com/hokuto/paid"
       }
