ツールリスト修正1

--- a/templates/tool_list.html
+++ b/templates/tool_list.html
@@ -184,12 +184,12 @@
   <script>
     const toolsData = [
       {
-        name: "L 荒野のコトブキ飛行隊（PASS:7777）",
+        name: "L 荒野のコトブキ飛行隊<br><small>PW:7777</small>",
         note: "https://note.com/kenslodata/n/n9475b350635e",
         url:  "https://kenkentools.com/kotobuki/paid"
       },
       {
-        name: "L バベル（PASS:7777）",
+        name: "L バベル<br><small>PW:7777</small>",
         note: "https://note.com/kenslodata/n/n9edc151b54fc",
         url:  "https://kenkentools.com/babel/paid"
       },
@@ -219,7 +219,7 @@
         url:  "https://kenkentools.com/saki/paid"
       },
       {
-        name: "L 北斗の拳（PASS:7777）",
+        name: "L 北斗の拳<br><small>PW:7777</small>",
         note: "https://note.com/kenslodata",
         url:  "https://kenkentools.com/hokuto/paid"
       }
