ヴヴヴ、とあるリスト追加

--- a/templates/tool_list.html
+++ b/templates/tool_list.html
@@ -184,6 +184,15 @@
   <script>
     const toolsData = [
       {
+        name: "L とある科学の超電磁砲2",
+        note: "https://note.com/kenslodata/n/n471a3dc95649",
+        url:  "https://kenkentools.com/railgun2/paid"
+      },
+      {
+        name: "L 革命機ヴァルヴレイヴ2",
+        note: "https://note.com/kenslodata/n/nf540daedf4b3",
+        url:  "https://kenkentools.com/vvv2/paid"
+      },
         name: "L 荒野のコトブキ飛行隊<br><small>PW:7777</small>",
         note: "https://note.com/kenslodata/n/n9475b350635e",
         url:  "https://kenkentools.com/kotobuki/paid"
