絶対衝激追加

--- a/templates/tool_list.html
+++ b/templates/tool_list.html
@@ -184,6 +184,11 @@
   <script>
     const toolsData = [
       {
+        name: "L 絶対衝激Ⅳ<br><small>PW:7777</small>",
+        note: "https://note.com/kenslodata/n/n1a880ae74aff",
+        url:  "https://kenkentools.com/syogeki4/paid"
+      },
+      {
         name: "L とある科学の超電磁砲2",
         note: "https://note.com/kenslodata/n/n471a3dc95649",
         url:  "https://kenkentools.com/railgun2/paid"
