ネオプラリスト追加

--- a/templates/tool_list.html
+++ b/templates/tool_list.html
@@ -184,6 +184,11 @@
   <script>
     const toolsData = [
       {
+        name: "L ネオプラネット",
+        note: "https://note.com/kenslodata/n/nfbb1961157e5",
+        url:  "https://kenkentools.com/neoplanet/paid"
+      },
+      {
         name: "L 絶対衝激Ⅳ<br><small>PW:7777</small>",
         note: "https://note.com/kenslodata/n/n1a880ae74aff",
         url:  "https://kenkentools.com/syogeki4/paid"
