ゴブスレ追加、ゴブスレリスト追加

--- a/templates/tool_list.html
+++ b/templates/tool_list.html
@@ -214,14 +214,14 @@
         url:  "https://kenkentools.com/babel/paid"
       },
       {
-        name: "L 新鬼武者3",
-        note: "https://note.com/kenslodata/n/n592917017aae",
-        url:  "https://kenkentools.com/onimusya/paid"
-      },
-      {
         name: "L 主役は銭形5",
         note: "https://note.com/kenslodata/n/n14c453aae356",
         url:  "https://kenkentools.com/zenigata5/paid"
+      },
+      {
+        name: "L 新鬼武者3",
+        note: "https://note.com/kenslodata/n/n592917017aae",
+        url:  "https://kenkentools.com/onimusya/paid"
       },
       {
         name: "L アズールレーン THE ANIMETION",
@@ -237,6 +237,11 @@
         name: "L 咲-Saki-頂上決戦",
         note: "https://note.com/kenslodata/n/nda1d15f56223",
         url:  "https://kenkentools.com/saki/paid"
+      },
+      {
+        name: "L ゴブリンスレイヤー<br><small>PW:7777</small>",
+        note: "https://note.com/kenslodata/n/n32a75e8fe72c",
+        url:  "https://kenkentools.com/gobsla/paid"
       },
       {
         name: "L 北斗の拳<br><small>PW:7777</small>",
