--- a/templates/tool_list.html
+++ b/templates/tool_list.html
@@ -239,6 +239,11 @@
         url:  "https://kenkentools.com/saki/paid"
       },
       {
+        name: "L 主役は銭形4<br><small>PW:7777</small>",
+        note: "https://note.com/kenslodata/n/ndc323a0f3044",
+        url:  "https://kenkentools.com/zenigata4/paid"
+      },
+      {
         name: "L ゴブリンスレイヤー<br><small>PW:7777</small>",
         note: "https://note.com/kenslodata/n/n32a75e8fe72c",
         url:  "https://kenkentools.com/gobsla/paid"
