ベルセルク追加、ベルセルクリスト追加

--- a/templates/tool_list.html
+++ b/templates/tool_list.html
@@ -239,6 +239,11 @@
         url:  "https://kenkentools.com/saki/paid"
       },
       {
+        name: "L ベルセルク無双<br><small>PW:7777</small>",
+        note: "https://note.com/kenslodata/n/nc10c9f9784f9",
+        url:  "https://kenkentools.com/berserk/paid"
+      },
+      {
         name: "L ソードアート・オンライン<br><small>PW:7777</small>",
         note: "https://note.com/kenslodata/n/n34242a06a7f4",
         url:  "https://kenkentools.com/sao/paid"
